# SoftPathTracing

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/Camera/: Camera.h  ColorRGB.h  Film.cpp  Film.h  Frame.cpp  Frame.h  RGB.h  Ray.cpp  Ray.h
src/Core/: Camera.cpp  Ray.h  Sphere.cpp  Sphere.h
src/Material/: LambertianMaterial.cpp  LambertianMaterial.h  Material.cpp  Material.h  MicroFacetMaterial.cpp  MicroFacetMaterial.h  SpecularMaterial.cpp  SpecularMaterial.h
src/Math/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  GMethod.h  Matrix.cpp  Matrix.h  MyMath.h  SceneBVH.cpp  SceneBVH.h  Vector.cpp  Vector.h
src/Renderer/: DebugRenderer.cpp  DebugRenderer.h  NormalRenderer.cpp  NormalRenderer.h  PathTracingRenderer.cpp  PathTracingRenderer.h  Renderer.cpp  Renderer.h  SimpleRTRenderer.cpp  SimpleRTRenderer.h
src/Scene/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Material.h  Model.cpp  Model.h  Object.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/Utils/: DebugMacro.h  Film.cpp  Film.h  Profile.cpp  Profile.h  ProgressBar.h  RNG.h  SpinLock.h  ThreadPool.cpp  ThreadPool.h
